--- a/NationalSymposium/Styles/main.css
+++ b/NationalSymposium/Styles/main.css
@@ -40,6 +40,7 @@ body {
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: normal;
+	position: relative;
 }
 
 ol, ul {
@@ -82,6 +83,11 @@ h1, h2, h3, h4, h5, h6 {
 .footer {
 	background-color: var(--darkgrayColor);
 	padding: 12px 0;
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	right: 0;
+	left: 0;
 }
 
 	.footer p {
@@ -116,6 +122,14 @@ h1, h2, h3, h4, h5, h6 {
 	height: 100%;
 }
 
+.banner ul {
+	margin: 0 auto;
+	width: auto;
+	display: inline-block;
+}
+	.banner ul li {
+		text-align: left;
+	}
 	.card-wrap-home h3 {
 		color: var(--blackColor);
 		font-size: 1.4rem;
@@ -147,7 +161,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .form-control, .form-select, .datatable-input, .datatable-selector {
-	color: #867E7E;
+	color: var(--blackColor);
 	font-size: .9rem;
 	border-radius: 10px;
 	border: 1px solid #006;
@@ -203,11 +217,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main-content {
-	padding: 15px 0;
+	padding: 15px 0 50px;
 	margin-bottom: 0;
 	background: url(../images/main-content.png) no-repeat scroll left top;
 	background-size: cover;
 	-webkit-background-size: cover;
+	min-height: 85vh;
 }
 
 .banner {
@@ -234,7 +249,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 	.banner li span {
-		min-width: 35%;
+		min-width: 180px;
 		display: inline-block;
 		color: var(--blackColor);
 		font-size: .95rem;
@@ -245,21 +260,21 @@ h1, h2, h3, h4, h5, h6 {
 	position: relative;
 }
 
-	.input-container i {
-		position: absolute;
-		left: 13px;
-		top: 13px;
-		width: 20px;
-		height: 20px;
-		display: block;
-		z-index: 1;
-		background-size: 100% auto;
-	}
+.input-container i {
+	position: absolute;
+	left: 13px;
+	top: 13px;
+	width: 20px;
+	height: 20px;
+	display: block;
+	z-index: 1;
+	background-size: 100% auto;
+}
 
-		.input-container i.key-icon {
-			background: url(../images/key.png) no-repeat scroll 0 0;
-			background-size: 100% auto;
-		}
+.input-container i.key-icon {
+	background: url(../images/key.png) no-repeat scroll 0 0;
+	background-size: 100% auto;
+}		
 
 .banner li strong {
 	color: var(--blueColor);
@@ -278,12 +293,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .card-wrap-sm a {
-	padding: 15px 10px;
-	padding-right: 25px;
+	padding: 15px 5px;
+	padding-right: 20px;
 }
 
 .card-wrap h4, .card-wrap-sm h4 a {
-	font-size: 1rem;
+	font-size: 0.75rem;
 	color: var(--blackColor);
 }
 
@@ -565,7 +580,7 @@ h1, h2, h3, h4, h5, h6 {
 	appearance: none;
 	border-radius: 0.375rem;
 	transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-	color: #867E7E;
+	color: #000;
 	font-size: .9rem;
 	border-radius: 10px;
 	border: 1px solid #006;
@@ -1297,19 +1312,33 @@ vertical-align: middle;
 }
 .w-100 {
 	width: 100% !important;
-	padding-left: 15px; 
+	padding-left: 15px;  
 }
-
+.input-container span {
+	display:block;
+}
+.error-message {
+	color: #F10E0E;
+	font-size: .6rem;
+	font-weight: 500;
+	line-height: 1;
+	text-align: left;
+	display: block;
+	font-style: italic;
+}
 
 @media screen and (min-width: 1499px) {
 	.main-content {
-		min-height: 96vh;
+		min-height: 89vh;
+	}
+	.card-wrap h4, .card-wrap-sm h4 a {
+		font-size: 0.9rem;
 	}
 }
 
 @media screen and (max-width: 1349px) {
 	.banner li span {
-		min-width: 30%;
+		min-width: 140px;
 		font-size: 0.8rem;
 	}
 
@@ -1396,6 +1425,10 @@ vertical-align: middle;
 
 	.dash-main-title {
 		font-size: 0.9rem;
+	}
+
+	.main-content {
+		padding: 15px 0 70px;
 	}
 }
 
